deploy/manifests/argocd/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
spec:
  hosts:
    - "pbl6.mamlong34.monster"
  gateways:
    - istio-ingress/cluster-gateway
  http:
    - match:
        - uri:
            prefix: /argocd/
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
